fix install benchmark requirements & pylint

--- a/benchmark/outputs/benchmark_combined_report_example.html
+++ b/benchmark/outputs/benchmark_combined_report_example.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Proxy Performance Benchmark</title>
+    <title>PyProxy Performance Benchmark</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; background-color: #f5f5f5; color: #333; }
         h1, h2, h3 { color: #2c3e50; }
@@ -77,6 +77,6 @@
 
     <h2>Graphs</h2>
     <p>Global interactive response time graph:</p>
-    <iframe src="benchmark_combined_interactive_2025-04-26_13-21-40.html" width="100%" height="600"></iframe>
+    <iframe src="benchmark_combined_interactive_example.html" width="100%" height="600"></iframe>
 </body>
 </html>
